# speaki

./: .flake8  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  codecov.yml  docker-compose-dev.yml  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
.github/compute-docker-tag/: action.yml  index.js
.github/workflows/: build_publish.yml  codecov.yml  run_test.yml
app/: config.py  main.py  tasks.py  utils.py
app/controller.py/: speak.py
app/controllers/: speak.py  status.py  voice.py
app/database/: cache.py  database.py  redis.py
app/models/: __init__.py  base.py  callback.py  record.py  speak.py  status.py  voice.py
app/storage/: aws.py  azure.py
app/tts/: azure.py
docker/: web.sh  worker.sh
docs/: architecture.excalidraw
templates/: env
test/: test_azure.py  test_database.py  test_handler.py  test_main.py  test_storage.py  test_utils.py  test_worker.py
testing/: test_main.py
tests/: conftest.py  docker-compose.yml  test_azure.py  test_database.py  test_handler.py  test_main.py  test_storage.py  test_utils.py  test_worker.py
