[tool.poetry]
authors = ["Jiakuan(Daniel) Li <jiakuan.li.cs@gmail.com>"]
description = "a api service integrated with multiple text to speech service"
license = "GNU v3"
name = "speaki"
version = "0.0.1"

[tool.poetry.dependencies]
Deprecated = "1.2.13"
PyJWT = "2.4.0"
PyMySQL = "1.0.2"
PyYAML = "6.0"
anyio = "3.6.1"
async-timeout = "4.0.2"
attrs = "21.4.0"
azure-cognitiveservices-speech = "1.22.0"
azure-core = "1.24.2"
azure-identity = "1.10.0"
azure-storage-blob = "12.13.0"
certifi = "2022.6.15"
cffi = "1.15.1"
cfgv = "3.3.1"
charset-normalizer = "2.1.0"
click = "8.1.3"
coverage = "6.4.2"
cryptography = "37.0.4"
distlib = "0.3.5"
fastapi = "0.79.0"
filelock = "3.7.1"
gevent = "21.12.0"
greenlet = "1.1.2"
h11 = "0.13.0"
httptools = "0.4.0"
identify = "2.5.1"
idna = "3.3"
importlab = "0.7"
iniconfig = "1.1.1"
isodate = "0.6.1"
langdetect = "1.0.9"
libcst = "0.4.7"
msal = "1.18.0"
msal-extensions = "1.0.0"
msrest = "0.7.1"
mypy-extensions = "0.4.3"
networkx = "2.8.3"
ninja = "1.10.2.3"
nodeenv = "1.7.0"
oauthlib = "3.2.0"
packaging = "21.3"
peewee = "3.15.1"
platformdirs = "2.5.2"
pluggy = "1.0.0"
portalocker = "2.5.1"
pre-commit = "2.20.0"
prometheus-client = "0.14.1"
py = "1.11.0"
pycparser = "2.21"
pydantic = "1.9.1"
pydot = "1.4.2"
pyparsing = "3.0.9"
pytest = "7.1.2"
pytest-cov = "3.0.0"
python = "^3.10,<3.11"
python-dotenv = "0.20.0"
pytype = "^2022.9.8"
redis = "4.3.4"
requests = "2.28.1"
requests-oauthlib = "1.3.1"
six = "1.16.0"
sniffio = "1.2.0"
starlette = "0.19.1"
tabulate = "0.8.10"
"testing.common.database" = "2.0.3"
toml = "0.10.2"
tomli = "2.0.1"
typing-extensions = "4.3.0"
typing-inspect = "0.7.1"
urllib3 = "1.26.10"
uvicorn = "0.18.2"
uvloop = "0.16.0"
virtualenv = "20.15.1"
watchdog = "2.1.9"
watchdog-gevent = "0.1.1"
watchfiles = "0.15.0"
websockets = "10.3"
wrapt = "1.14.1"
yapf = "0.32.0"
"zope.event" = "4.5.0"
"zope.interface" = "5.4.0"
pytest-docker = "^1.0.1"

[tool.poetry.dev-dependencies]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.black]
extend-exclude = '''
/(
  # The following are specific to Black, you probably don't want those.
  | external
  | internal
  | migrations
  | node_modules
  | template
  | templates
  | thirdparty
)/
'''
include = '\.pyi?$'
line-length = 88
quiet = true
skip-string-normalization = true
target-version = ['py310']

[tool.isort]
combine_as_imports = true
line_length = 88
profile = "black"
src_paths = ["."]
