[tool.poetry]
authors = ["Jiakuan(Daniel) Li <jiakuan.li.cs@gmail.com>"]
description = "a api service integrated with multiple text to speech service"
license = "GNU v3"
name = "speaki"
version = "0.0.1"

[tool.poetry.dependencies]
PyMySQL = "^1.0.2"
aioredis = "^2.0.1"
azure-cognitiveservices-speech = "^1.23.0"
azure-storage-blob = "^12.13.1"
boto3 = "^1.26.54"
fastapi = "^0.85.0"
httpx = "^0.23.0"
peewee = "^3.15.3"
peewee-migrate = "^1.5.1"
python = "^3.10"
tenacity = "^8.1.0"
uvicorn = "^0.20.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"
pytest = "^7.1.3"
pytest-asyncio = "^0.19.0"
pytest-cov = "^4.0.0"
pytest-docker = "^1.0.1"
pytest-dotenv = "^0.5.2"
pytest-httpserver = "^1.0.6"
pytest-mock = "^3.9.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.black]
extend-exclude = '''
/(
  # The following are specific to Black, you probably don't want those.
  | external
  | internal
  | migrations
  | node_modules
  | template
  | templates
  | thirdparty
)/
'''
include = '\.pyi?$'
line-length = 88
quiet = true
skip-string-normalization = true
target-version = ['py310']

[tool.isort]
combine_as_imports = true
line_length = 88
profile = "black"
src_paths = ["."]

[tool.pytest.ini_options]
asyncio_mode = "auto"
